<resources>
    <string name="app_name">时光树</string>
    <string name="app_title">时 光 树</string>
    <string name="app_force_upload">时光树已完成全面升级！</string>
    <string name="app_force_upload_tip">请更新全新版本.</string>
    <string name="app_force_upload_bt">更 新</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_buttom_tab_home">消息</string>
    <string name="main_buttom_tab_kindergarten">幼儿园</string>
    <string name="main_buttom_tab_contacts">通讯录</string>
    <string name="main_buttom_tab_me">我</string>
    <string name="back">返回</string>
    <string name="home_ppw_dingyue">订阅公众号</string>
    <string name="home_ppw_add">加好友</string>
    <string name="home_ppw_shuoshuo">发说说</string>
    <string name="home_ppw_daytral">记日程</string>
    <string name="home_ppw_sendmsg">发通知</string>
    <string name="home_ppw_barcode">扫一扫</string>
    <string name="home_ppw_share">分享APP</string>
    <string name="home_ppw_creategroup">创建群</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="sendmsg_title">发 通 知</string>
    <string name="sendmsg_leftmsg_count">您还可以使用1000条短信</string>
    <string name="sendmsg_getmsg_people">收件人</string>
    <string name="sendmsg_sendtime">发送时间</string>
    <string name="sendmsg_msgcontent">通知模板</string>
    <string name="sendmsg_addcontact">选 择 收 件 人</string>
    <string name="sendmsg_addcontact_teacher">老 师</string>
    <string name="sendmsg_addcontact_parent">家 长</string>
    <string name="sendmsg_msghistory_title">历 史 通 知</string>
    <string name="sendmsg_msgselectmoban_title">通 知 模 板</string>
    <string name="contacts_public_contacts">通讯录</string>
    <string name="contacts_public_account">公众号</string>
    <string name="contacts_public_bookpublicaccount">订阅公共号</string>
    <string name="contacts_frienddatacard">好友资料卡</string>
    <string name="contacts_datacard">资料卡</string>
    <string name="contacts_addfriendaction">加好友</string>
    <string name="contacts_sreachfriend">搜索好友</string>
    <string name="contacts_addtofriend">加为好友</string>
    <string name="contacts_deletfriend">删除好友</string>
    <string name="contacts_friendrequest">好友请求</string>
    <string name="contacts_friend">好友</string>
    <string name="contacts_parents">家长</string>
    <string name="contacts_kingder">幼儿园</string>
    <string name="contacts_teacher">老师</string>
    <string name="contacts_addfriendbyphone">按号码</string>
    <string name="contacts_addfriendsaomiao">扫一扫</string>
    <string name="contacts_addfriend_sreach">搜索</string>
    <string name="contacts_addfriend_sreachresulte">搜索结果</string>
    <string name="contacts_addfriend">加为好友</string>
    <string name="contacts_addfriend_refuse">拒绝</string>
    <string name="contacts_addfriend_accept">接受</string>
    <string name="contacts_addfriend_fuyan">附言</string>
    <string name="contacts_addfriend_nofuyan">无附言</string>
    <string name="contacts_addfriend_btnsend">发送</string>
    <string name="contacts_addfriend_btnclose">关闭</string>
    <string name="contacts_puacdatacard_kinddergarden">幼儿园</string>
    <string name="contacts_puacdatacard_kinddergardenleader">园长</string>
    <string name="contacts_puacdatacard_duty">职务</string>
    <string name="contacts_puacdatacard_sex">性别</string>
    <string name="contact_friend_birthday">生日</string>
    <string name="contacts_puacdatacard_sexman">男</string>
    <string name="contacts_puacdatacard_sexwoman">女</string>
    <string name="contacts_puacdatacard_region">地区</string>
    <string name="contacts_puacdatacard_sendmessage">发消息</string>
    <string name="contacts_puacdatacard_lookhistory">查看消息</string>
    <string name="contacts_puacdatacard_deletecontactpeople">删除联系人</string>
    <string name="contacts_puacdatacard_book">订阅</string>
    <string name="contacts_puacdatacard_cancelbook">取消订阅</string>
    <string name="contacts_puacdatacard_field">领域</string>
    <string name="contacts_puacdatacard_describe">功能介绍</string>
    <string name="contacts_puacdatacard_number">(8911150)</string>
    <string name="contacts_nosreachresult">无搜索结果</string>
    <string name="contacts_barcode">二维码</string>
    <string name="contacts_kindernumber">幼儿园账号</string>
    <string name="contacts_kindername">幼儿园名</string>
    <string name="contacts_kindernum">幼儿园号</string>
    <string name="contacts_kinderlocation">地区</string>
    <string name="contacts_kindercontacts">联系人</string>
    <string name="contacts_kindercontactsphone">联系电话</string>
    <string name="contacts_kindersamallweb">幼儿园微网站</string>
    <string name="contacts_kinderbarcode">幼儿园二维码</string>
    <string name="contacts_kinderaddtokinder">加入群</string>
    <string name="contacts_setaddtokindercode">设置加入幼儿园的口令</string>
    <string name="contacts_frienddatacard_lookhistory">查看历史消息</string>
    <string name="whats_new_start_fornew">点击进入</string>
    <string name="whats_new_title_fornew_1">十年前，敲打......</string>
    <string name="whats_new_title_fornew_2">五年前，触摸......</string>
    <string name="whats_new_title_fornew_3">"现在，摇一摇......"</string>
    <string name="whats_new_title_fornew_4">"广告之后，更精彩......"</string>
    <string name="service_friends">朋友圈</string>
    <string name="service_speaks">说说</string>
    <string name="service_task">任务</string>
    <string name="service_schedule">日程</string>
    <string name="service_report">报表</string>
    <string name="service_pointsexchange">积分兑换</string>
    <string name="service_del">删除</string>
    <string name="service_uploadnow">正在上传</string>
    <string name="service_face">表情</string>
    <string name="service_publish">发表</string>
    <string name="service_publishspeak">发动态</string>
    <string name="service_myspeak">我的说说</string>
    <string name="service_shareto">将照片同步到:</string>
    <string name="service_taskname">任务名</string>
    <string name="service_tastpoint">任务积分</string>
    <string name="service_havefinish">已完成</string>
    <string name="service_noget">未领取</string>
    <string name="service_get">做任务</string>
    <string name="service_share">分享</string>
    <string name="service_mypoint">我的积分:</string>
    <string name="service_addressbook">地址本</string>
    <string name="service_exchange">兑换</string>
    <string name="service_exchangehistory">兑换历史</string>
    <string name="service_exchangeexplain">兑换说明</string>
    <string name="service_goodslist">商品列表</string>
    <string name="service_recievepeople">收货人:</string>
    <string name="service_recieveaddress">收货地址:</string>
    <string name="service_recieveaphone">电话:</string>
    <string name="service_recieveyoubian">邮编:</string>
    <string name="service_saveaddressbook">保存地址本</string>
    <string name="service_selectfrombook">从地址本中选择</string>
    <string name="service_fillrecievinformation">填写收货信息</string>
    <string name="service_edite">编辑</string>
    <string name="service_editaddressbook">编辑地址本</string>
    <string name="service_save">保存</string>
    <string name="service_comments">评论</string>
    <string name="service_baobiao_title">报表</string>
    <string name="service_phonealbum">手机相册</string>
    <string name="service_write_schedule_time">时间</string>
    <string name="service_write_schedule_tixing">提醒</string>
    <string name="service_write_schedule_comments">备注</string>
    <string name="service_write_schedule_actor">参与者</string>
    <string name="read_full_text">阅读全文</string>
    <string name="add_avator">头像</string>
    <string name="tips">提示</string>
    <string name="empty"></string>
    <string name="login_account">账号</string>
    <string name="login_password">请输入密码</string>
    <string name="enter_pw_tips">请输入当前密码</string>
    <string name="enter_again_pw_tips">请再次输入密码</string>
    <string name="button_summit_tips">提交</string>
    <string name="repassword">请再一次输入密码</string>
    <string name="login_tv">登录</string>
    <string name="regedister">注 册</string>
    <string name="forget_password">忘记密码</string>
    <string name="woamI"> 我是</string>
    <string name="assignaccount">请记住您的登陆账号:</string>
    <string name="msg_load_ing">加载中....</string>
    <string name="signout">退出登录</string>
    <string name="role_master">园长</string>
    <string name="role_teacher">老师</string>
    <string name="role_parent">家长</string>
    <string name="bindaccountTips_line1">为便于您登录和找回密码</string>
    <string name="creat_phone_number">输入手机号码(仅用于登录和账号保护)</string>
    <string name="bindaccountTips_line2">建议绑定手机</string>
    <string name="bindphone">绑定手机号</string>
    <string name="bindEmail">绑定邮箱</string>
    <string name="et_bindphoneTips">手机号</string>
    <string name="et_bindphoneCode">验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="bindEmailTips">输入邮箱地址</string>
    <string name="bindEmail_question">选择密保问题</string>
    <string name="bindEmail_answer">设置密保答案</string>
    <string name="nicktips">给自己起一个好认的昵称吧!</string>
    <string name="nick">昵称</string>
    <string name="inApp">进入应用</string>
    <string name="byphone">通过手机号</string>
    <string name="byemail">通过邮箱</string>
    <string name="bypeople">通过客服</string>
    <string name="next">下一步</string>
    <string name="bindEmail_showanswer">输入密保答案</string>
    <string name="setpassword">请输入密码</string>
    <string name="resetpassword">请再次输入密码</string>
    <string name="settrue">确定</string>
    <string name="checkbox">验证邮箱</string>
    <string name="enter_new_pw">请输入新密码</string>
    <string name="viewcontentlink">查看全文</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="longclick_speak">长按说话</string>
    <string name="chat_picture">图片</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="setting_set_pw_tips">密码前后不能为空格，不少于6个字符</string>
    <string name="empty_message">暂无内容,先看看其他精彩内容吧!</string>
    <string name="loading_message">正在努力加载...</string>
    <string name="error_message">oh no!好像出问题了哦!</string>
    <string name="empty_button">再试一次</string>
    <string name="loading_button">取消</string>
    <string name="error_button">再试一次</string>
    <string name="person_icon">个人头像</string>
    <string name="str_name">Samson</string>
    <string name="str_time">2013\n07-15</string>
    <string name="str_vertical">竖线</string>
    <string name="str_content_icon">内容标志</string>
    <string name="network_unavailable_remark">哎呀，网络出错了</string>
    <string name="network_check">请检查网络设置</string>
    <string name="network_relink">重新连接</string>
    <string name="network_linking">连接中...</string>
    <string name="server_disable">服务器连接失败</string>
    <string name="server_disable_remark">哎呀，服务器连接失败！</string>
    <string name="groupdetail_loading">努力加载中...</string>
    <string name="youtui_appId">1</string>
    <string name="chat_send_tx">发送</string>
    <string name="register_name_digits">!@#%*()?/._1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXVZ</string>
    <string name="set_addcode">设置邀请码</string>
    <string name="pleaseset_addcode">请输入邀请码</string>
    <string name="inputcode_error">输入的邀请码有误</string>
    <string name="nav_desc">nav_desc</string>
    <string name="uploadphoto">上传照片</string>
    <string name="select_image_quality">照片质量</string>
    <string name="add_batch_child">添加小朋友</string>
    <string name="child_sum_number">共0人</string>
    <string name="image_quality_type">普通(默认)</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新数据</string>
</resources>