<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/common_background_grey">
     <include layout="@layout/header_layout"/>
     <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/dimen_60_dip" android:orientation="vertical" android:background="@color/white" android:gravity="center">
            <TextView android:id="@+id/text_line1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bindaccountTips_line1" android:textColor="@color/base_color_text_black" android:textSize="@dimen/txtSize_16_sp"/>
            <TextView android:layout_marginTop="@dimen/dimen_4_dip" android:id="@+id/text_line2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bindaccountTips_line2" android:textColor="@color/base_color_text_black" android:textSize="@dimen/txtSize_16_sp"/>
     </LinearLayout>
	 <LinearLayout android:orientation="vertical" android:background="@drawable/common_border_no_shadow" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="100.0dip"  android:layout_marginTop="@dimen/dimen_23_dip" >
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/bg_bottom_line" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50_dip">
            <EditText android:id="@+id/bindphoneet" android:inputType="number" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_weight="1.0" android:singleLine="true"  android:hint="@string/et_bindphoneTips" android:textSize="@dimen/txtSize_16_sp" android:textColor="@color/light_grey_v2"  android:layout_gravity="center_vertical" android:background="@color/white" android:paddingLeft="@dimen/dimen_8_dip" android:paddingRight="@dimen/dimen_8_dip"/>
       </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/bg_bottom_line" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50_dip">
            <EditText android:id="@+id/bindconfirmpwet"  android:inputType="number" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_weight="1.0" android:singleLine="true"  android:hint="@string/et_bindphoneCode" android:textSize="@dimen/txtSize_16_sp" android:textColor="@color/light_grey_v2"  android:layout_gravity="center_vertical" android:background="@color/white" android:paddingLeft="@dimen/dimen_8_dip" android:paddingRight="@dimen/dimen_8_dip"/>
            <Button   android:layout_width="0.0dip" android:layout_height="wrap_content"  android:text="@string/getcode" android:layout_weight="0.4" android:id="@+id/btn_bindphonefragment_yahnzheng" style="@style/mainBtn_yz"  android:layout_marginTop="@dimen/dimen_5_dip" android:layout_marginBottom="@dimen/dimen_5_dip" android:layout_marginRight="@dimen/dimen_10_dip" />
       </LinearLayout>
    </LinearLayout>
    <Button  android:id="@+id/btn_bindphonefragment_bind" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/bindphone"  android:layout_marginTop="@dimen/dimen_30_dip" android:background="@drawable/selector_listview_item" android:textColor="@color/purple"/>
</LinearLayout>
