<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    
     <LinearLayout android:orientation="vertical" android:background="@drawable/common_border_no_shadow" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_100_dip"  android:layout_marginTop="@dimen/dimen_23_dip" >
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/bg_bottom_line" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50_dip">
            <EditText android:id="@+id/bindphoneet" android:inputType="number" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_weight="1.0" android:singleLine="true"  android:hint="@string/et_bindphoneTips" android:textSize="@dimen/txtSize_16_sp" android:textColor="@color/light_grey_v2"  android:layout_gravity="center_vertical" android:background="@color/white" android:paddingLeft="@dimen/dimen_8_dip" android:paddingRight="@dimen/dimen_8_dip"/>
       </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/bg_bottom_line" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50_dip">
            <EditText android:id="@+id/bindconfirmpwet"  android:inputType="number" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_weight="1.0" android:singleLine="true"  android:hint="@string/et_bindphoneCode" android:textSize="@dimen/txtSize_16_sp" android:textColor="@color/light_grey_v2"  android:layout_gravity="center_vertical" android:background="@color/white" android:paddingLeft="@dimen/dimen_8_dip" android:paddingRight="@dimen/dimen_8_dip"/>
            <Button   android:layout_width="0.0dip" android:layout_height="wrap_content"  android:text="@string/getcode" android:layout_weight="0.5" android:id="@+id/btn_bindphonefragment_yahnzheng" style="@style/mainBtn_yz"  android:layout_marginTop="@dimen/dimen_5_dip" android:layout_marginBottom="@dimen/dimen_5_dip" android:layout_marginRight="@dimen/dimen_10_dip"/>
       </LinearLayout>
    </LinearLayout>
    <Button  android:text="@string/bindphone"  android:id="@+id/btn_bindphonefragment_bind" style="@style/mainBtn" android:layout_marginTop="@dimen/dimen_10_dip" android:layout_marginLeft="@dimen/dimen_10_dip" android:layout_marginRight="@dimen/dimen_10_dip"/>
    

    

</LinearLayout>
