<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/common_background_grey">
    <include layout="@layout/header_layout"/>
    <TextView android:visibility="gone" android:textColor="@color/service_write_schedule_index_tv"  android:textSize="@dimen/txtSize_17_sp" android:layout_width="match_parent" android:layout_height="@dimen/dimen_45_dip" android:gravity="center" android:text="@string/setting_set_pw_tips"/>
    <LinearLayout android:layout_marginTop="@dimen/dimen_30_dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
         <View style="@style/item_divider" />
            <EditText android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50_dip" android:layout_marginLeft="0.0dip"  android:singleLine="true" android:id="@+id/idsafe_newpwet" android:hint="@string/enter_pw_tips" android:textSize="@dimen/txtSize_17_sp" android:textColor="@color/light_grey_v2"  android:layout_gravity="center_vertical" android:background="@color/white" android:paddingLeft="@dimen/dimen_8_dip" android:paddingRight="@dimen/dimen_8_dip" android:password="true" android:ems="10"/>
          <View style="@style/item_divider" />
            <EditText android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50_dip" android:layout_marginLeft="0.0dip"  android:singleLine="true" android:id="@+id/idsafe_confirmpwet" android:hint="@string/enter_new_pw" android:textSize="@dimen/txtSize_17_sp" android:textColor="@color/light_grey_v2"  android:layout_gravity="center_vertical" android:background="@color/white" android:paddingLeft="@dimen/dimen_8_dip" android:paddingRight="@dimen/dimen_8_dip" android:password="true" android:ems="10"/>
            <View style="@style/item_divider" />
        <EditText android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50_dip" android:layout_marginLeft="0.0dip"  android:singleLine="true" android:id="@+id/idsafe_confirmpwet_agin" android:hint="请再次输入新密码" android:textSize="@dimen/txtSize_17_sp" android:textColor="@color/light_grey_v2"  android:layout_gravity="center_vertical" android:background="@color/white" android:paddingLeft="@dimen/dimen_8_dip" android:paddingRight="@dimen/dimen_8_dip" android:password="true" android:ems="10"/>
        <View style="@style/item_divider" />
    </LinearLayout>
    
<Button   android:text="@string/button_summit_tips"  android:textColor="@color/purple" android:id="@+id/idsafe_submitbtn" android:layout_marginTop="@dimen/dimen_20_dip" android:layout_width="match_parent" android:layout_height="@dimen/dimen_50_dip" android:background="@drawable/selector_listview_item"/>

</LinearLayout>
