<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_index" >
     <include layout="@layout/header_layout"/>
     <TextView android:text="@string/nicktips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/txtSize_18_sp" android:layout_gravity="center" android:layout_marginTop="@dimen/dimen_20_dip"/>
     <LinearLayout android:orientation="vertical" android:background="@drawable/common_border_no_shadow" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50_dip"  android:layout_marginTop="@dimen/dimen_23_dip" >
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/bg_bottom_line" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50_dip">
              <ImageView android:layout_width="@dimen/dimen_20_dip" android:layout_height="@dimen/dimen_20_dip" android:layout_marginLeft="@dimen/dimen_12_dip" android:src="@drawable/icon_login_account" />
            <EditText android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_weight="1.0" android:singleLine="true" android:id="@id/ed_regester_nickname" android:hint="@string/nick" android:textSize="@dimen/txtSize_16_sp" android:textColor="@color/light_grey_v2"  android:layout_gravity="center_vertical" android:background="@color/white" android:paddingLeft="@dimen/dimen_8_dip" android:paddingRight="@dimen/dimen_8_dip"/>
       </LinearLayout>
    </LinearLayout>
     <Button  android:layout_marginLeft="@dimen/dimen_23_dip" android:layout_marginRight="@dimen/dimen_23_dip" android:text="@string/inApp"  android:id="@id/btn_createnick_inApp" android:layout_marginTop="@dimen/dimen_10_dip" style="@style/mainBtn"/>
</LinearLayout>
